# GenericCSVParser

./: .clang-format  CMakeLists.txt  README.md
Source/GenericCSVParser/: CMakeLists.txt
Source/GenericCSVParser/include/GenericCSVParser/: parser.h  parser_configuration.h
Source/GenericCSVParser/include/GenericCSVParser/detail/: generic_csv_parser.hpp  parser_impl.hpp
Source/GenericCSVParser/include/GenericCSVParser/detail/parsers/: boolean.hpp  date.hpp  integer.hpp  optional.hpp  quoted.hpp  real.hpp  resolve_rule.hpp  skip.h  text.h  unsigned_integer.hpp
cmake/: CompilerWarnings.cmake  Conan.cmake
examples/: CMakeLists.txt  convert_csv_header.py  create_parser_configuration.py  csvparser.cpp  test.csv
tests/: CMakeLists.txt
tests/Parsing/: test_parser_with_skip.cpp  test_parsing.cpp
tests/TestData/: CMakeLists.txt  get_file_path.hpp.in  test_file.csv
